--- a/mobile.css
+++ b/mobile.css
@@ -4,10 +4,10 @@
         font-size: 2.5rem;
     }
 
-    body{
+    /* body{
         padding-left: 20px;
         padding-right: 20px;
-    }
+    } */
 
     .flex{
         flex-wrap: wrap;
